# cpp-opengl-experiments

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
include/: iao.hpp  shader.h  shader.hpp  vao.hpp  vbo.hpp
notes/: opengl-notes.aux  opengl-notes.bbl  opengl-notes.blg  opengl-notes.dvi  opengl-notes.ps  opengl-notes.tex
notes/images/: pipeline.eps
res/shaders/: basic.frag  basic.vert  default.frag  default.vert
src/: CMakeLists.txt  application-v1.cpp  application.cpp  iao.cpp  lesson.cpp  lesson1.cpp  lesson2.cpp  lesson3.cpp  lesson4.cpp  shader.cpp  vao.cpp  vbo.cpp
